--- a/src/android/build.gradle
+++ b/src/android/build.gradle
@@ -10,6 +10,7 @@ buildscript {
     }
 }
 
+apply plugin: 'com.google.gms.google-services'
 apply plugin: com.google.firebase.crashlytics.buildtools.gradle.CrashlyticsPlugin
 
 android {
